# rust-playground

./: .gitignore  README.md
workspace/: Cargo.toml
workspace/http-server-generate-random-number/: Cargo.toml
workspace/http-server-generate-random-number/src/: main.rs
workspace/http-server-hello-world/: Cargo.toml
workspace/http-server-hello-world/src/: main.rs
workspace/http-server-include-html/: Cargo.toml  index.html
workspace/http-server-include-html/src/: main.rs
workspace/rest-api-axum/: .env  Cargo.toml  docker-compose.yml
workspace/rest-api-axum/migrations/: 20231014010234_task.sql
workspace/rest-api-axum/src/: db.rs  errors.rs  main.rs
workspace/rest-api-axum/src/models/: task.rs
workspace/rest-api-axum/src/routes/tasks/: create_task.rs  delete_task.rs  get_task.rs  get_tasks.rs  mod.rs  update_task.rs
workspace/snake-game/: Cargo.toml
workspace/snake-game/src/: main.rs
workspace/web-assemply-yew-app/: Cargo.toml
workspace/web-assemply-yew-app/src/: main.rs
workspace/web-crawler/: Cargo.toml
workspace/web-crawler/src/: main.rs
