[package]
name = "rest_api_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
# axum = "0.5.9"
tokio = { version = "1.33.0", features = ["full"] }
# tokio = { version = "1.0", features = ["full"] }
serde = "1.0.189"
# serde = "1.0.137"
tracing = "0.1.39"
# tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
# tracing-subscriber = { version = "0.3", features = ["env-filter"]}
#
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "json", "postgres"] }
# sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "json", "postgres"] }
anyhow = "1.0.75"
# anyhow = "1.0.58"
serde_json = "1.0.107"
# serde_json = "1.0.57"
tower-http = { version = "0.4.4", features = ["trace"] }
# tower-http = { version = "0.3.4", features = ["trace"] }
